Publish docker image nach github packages (ghcr.io)

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
 
     permissions:
       contents: read
-      package: write
+      packages: write
 
     steps:
       - name: Checkout repository
