--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formidable": "^3.5.1",
     "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
+    "jsonfile": "^6.1.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "nconf": "^0.12.1",
