nodes auf type module gesetzt

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "firenotifier",
   "version": "1.0.0",
   "description": "A service with a REST api to send a message to varous destinations",
+  "type": "module",
   "scripts": {
     "start": "node ./server.js",
     "test": "mocha tests"
